# swarm

./: .gitignore  .kb-graph-orphans  .kb-graph-stale  .mcp.json  .pre-commit-config.yaml  .vercelignore  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN_CRITIQUE.md  IMPLEMENTATION_PLAN.md  LICENSE  MEMORY_TESTING.md  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  THREAT_MODEL.md  analyze_moltbook.py  evaluate_clawxiv_paper.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search_agentxiv.py  sitemap.xml  skill.json  skill.md  swarm_gym_cli.py  vercel.json
bench/: README.md  pyproject.toml  run_trials.py  test_local.py
bench/fixtures/: generate_fixtures.py  sweep_results.csv  sweep_results_small.csv
bench/results/20260309T033201/: results.json
bench/results/20260309T033201/oracle/swarm-run-scenario/run-0/: solve_stderr.txt
bench/results/20260309T033243/: results.json
bench/results/20260309T033243/oracle/swarm-run-scenario/run-0/: solve.sh  solve_stdout.txt
bench/results/20260309T033305/: results.json
bench/results/20260309T033305/oracle/swarm-adverse-selection/run-0/: solve.sh  solve_stdout.txt  test_stdout.txt
bench/results/20260309T033305/oracle/swarm-end-to-end-study/run-0/: solve.sh  solve_stderr.txt  solve_stdout.txt  test_stdout.txt
bench/results/20260309T033305/oracle/swarm-governance-tuning/run-0/: solve.sh  solve_stdout.txt
bench/results/20260309T033305/oracle/swarm-multi-seed-repro/run-0/: solve.sh  solve_stdout.txt  test_stdout.txt
bench/results/20260309T033305/oracle/swarm-paper-scaffold/run-0/: solve.sh  solve_stdout.txt
bench/results/20260309T033305/oracle/swarm-run-scenario/run-0/: test_stdout.txt
bench/results/20260309T033305/oracle/swarm-statistical-rigor/run-0/: solve.sh  solve_stdout.txt
bench/results/20260309T033305/oracle/swarm-sweep-analysis/run-0/: solve.sh  solve_stdout.txt  test_stdout.txt
bench/results/20260309T033305/oracle/swarm-sweep-to-plots/run-0/: solve_stderr.txt  solve_stdout.txt
bench/results/20260309T033305/oracle/swarm-toxicity-diagnosis/run-0/: solve.sh  solve_stdout.txt  test_stdout.txt
bench/results/20260309T120803/: results.json
bench/results/20260309T120803/no-skills/swarm-adverse-selection/run-0/: extracted_solve.sh  response.txt  solve_stderr.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-adverse-selection/run-1/: prompt.txt  response.txt  solve.sh  solve_stderr.txt  solve_stdout.txt
bench/results/20260309T120803/no-skills/swarm-adverse-selection/run-2/: response.txt  solve.sh  solve_stderr.txt
bench/results/20260309T120803/no-skills/swarm-end-to-end-study/run-0/: extracted_solve.sh  response.txt  solve_stderr.txt  solve_stdout.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-end-to-end-study/run-1/: response.txt  solve.sh  solve_stdout.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-end-to-end-study/run-2/: extracted_solve.sh  prompt.txt  response.txt  solve_stderr.txt  solve_stdout.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-governance-tuning/run-0/: response.txt  solve.sh  solve_stderr.txt  solve_stdout.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-governance-tuning/run-1/: response.txt  solve.sh  solve_stderr.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-governance-tuning/run-2/: prompt.txt  response.txt  solve.sh  solve_stderr.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-multi-seed-repro/run-0/: response.txt  solve.sh  solve_stderr.txt  test_stdout.txt
bench/results/20260309T120803/no-skills/swarm-multi-seed-repro/run-1/: response.txt  solve.sh  solve_stderr.txt  test_stdout.txt
bench/skills/paper-writing/: SKILL.md
bench/skills/paper-writing/references/: paper-template.md
bench/skills/parameter-sweep/: SKILL.md
bench/skills/plotting/: SKILL.md
bench/skills/run-scenario/: SKILL.md
bench/skills/statistical-analysis/: SKILL.md
bench/skills/statistical-analysis/references/: stat-checklist.md
bench/skills/statistical-analysis/scripts/: analyze_csv.py
bench/tasks/swarm-adverse-selection/: instruction.md  task.toml
bench/tasks/swarm-adverse-selection/solution/: solve.sh
bench/tasks/swarm-adverse-selection/tests/: test_outputs.py
bench/tasks/swarm-end-to-end-study/: instruction.md  task.toml
bench/tasks/swarm-end-to-end-study/environment/: Dockerfile
bench/tasks/swarm-end-to-end-study/solution/: solve.sh
bench/tasks/swarm-governance-tuning/: instruction.md  task.toml
bench/tasks/swarm-governance-tuning/environment/: Dockerfile
bench/tasks/swarm-governance-tuning/solution/: solve.sh
bench/tasks/swarm-governance-tuning/tests/: test_outputs.py
bench/tasks/swarm-multi-seed-repro/: instruction.md  task.toml
bench/tasks/swarm-multi-seed-repro/solution/: solve.sh
bench/tasks/swarm-multi-seed-repro/tests/: test_outputs.py
bench/tasks/swarm-paper-scaffold/: instruction.md  task.toml
bench/tasks/swarm-run-scenario/: instruction.md  task.toml
bench/tasks/swarm-run-scenario/environment/: Dockerfile
bench/tasks/swarm-run-scenario/solution/: solve.sh
bench/tasks/swarm-run-scenario/tests/: test_outputs.py
bench/tasks/swarm-statistical-rigor/: instruction.md  task.toml
bench/tasks/swarm-statistical-rigor/environment/: Dockerfile
bench/tasks/swarm-statistical-rigor/tests/: test_outputs.py
bench/tasks/swarm-sweep-analysis/: instruction.md  task.toml
bench/tasks/swarm-sweep-analysis/environment/: Dockerfile
bench/tasks/swarm-sweep-analysis/solution/: solve.sh
bench/tasks/swarm-sweep-to-plots/: instruction.md  task.toml
bench/tasks/swarm-sweep-to-plots/environment/: Dockerfile
bench/tasks/swarm-sweep-to-plots/solution/: solve.sh
bench/tasks/swarm-sweep-to-plots/tests/: test_outputs.py
bench/tasks/swarm-toxicity-diagnosis/: instruction.md  task.toml
bench/tasks/swarm-toxicity-diagnosis/environment/: Dockerfile
(+2252 files in other folders)
